import { Item } from './item';

export class Category {
    id: string;
    name: string;
    items: Item[];

    constructor() {
        this.items = [];
    }
}
