@startuml order list

class Order {
    id: string
    date: Date
    seatID: string
    item: Item
    quantity: number
    isCompleted: boolean
    isChecked: boolean
}

class Item {
    id: string
    name: string
    price: number
    unit: string
    rowOrder: number
    categories: Category[]
    orders: Order[]
}

class Category {
    id: string
    name: string
    items: Item[]
}

class Seat {
    id: string
    orders: Order[]
}

Order "1" -- "0 .. *" Item
Order "1" -- "1..*" Seat
Item "1 .. *" -- "0 .. *" Category


@enduml